--- a/Mirror/Mirror.csproj
+++ b/Mirror/Mirror.csproj
@@ -105,6 +105,8 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\GloriaHallelujah.ttf" />
+    <Content Include="Assets\Monofett.ttf" />
     <None Include="Mirror_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
